# jps

./: CLAUDE.md  Calculated_Properties.txt  Cargo.toml  ExpandProperty.txt  Instructions.txt  ProdSpec.txt
src/: ast.rs  debug.rs  expression.rs  lexer.rs  lib.rs  main.rs  operators.rs  parser.rs  pipeline.rs  value.rs
src/cmdlets/: convert_csv.rs  convert_json.rs  foreach_object.rs  format_list.rs  format_table.rs  measure_object.rs  mod.rs  select_object.rs  sort_object.rs  where_object.rs
tests/: g1.json  integration_tests.rs
