[package]
name = "jps"
version = "0.1.0"
edition = "2021"
description = "Process JSON with PowerShell-like pipeline syntax"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
unicode-width = "0.2"
thiserror = "2"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
